--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <div class="name">Анна Орлова</div>
+     <p>QA Engineer</p>
 
     <div class="block">
       <div class="block-title">на связи</div>
